Added department docs
