# docs/ag-swagger.json
@@ -1,5 +1,4 @@
 {
-  "swagger": 2,
   "openapi": "3.0.0",
   "info": {
     "title": "Serious Game Server API",
@@ -18,11 +17,9 @@
     },
     {
       "name": "Department",
-      "description": "Everything about Departments"
+      "description": "A Department is a subdivision of a Organisation"
     }
   ],
-  "host": "localhost:3000",
-  "basePath": "/",
   "components": {
     "schemas": {
       "ApiError": {
@@ -122,26 +119,19 @@
           "answers"
         ]
       },
-      "Play": {
-        "type": "object",
-        "properties": null
-      },
       "Department": {
         "type": "object",
         "properties": {
+          "_id": {
+            "type": "integer"
+          },
           "name": {
             "type": "string"
-          },
-          "plays": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": null
-            }
           }
         },
         "required": [
-          "name"
+          "name",
+          "_id"
         ]
       },
       "Organisation": {
@@ -149,7 +139,7 @@
         "properties": {
           "_id": {
             "type": "integer",
-            "minimum": 888888,
+            "minimum": 100000,
             "maximum": 999999
           },
           "name": {
@@ -165,19 +155,16 @@
             "items": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "integer"
+                },
                 "name": {
                   "type": "string"
-                },
-                "plays": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": null
-                  }
                 }
               },
               "required": [
-                "name"
+                "name",
+                "_id"
               ]
             }
           },
@@ -229,13 +216,6 @@
                 "answers"
               ]
             }
-          },
-          "plays": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": null
-            }
           }
         },
         "required": [
@@ -254,6 +234,15 @@
         "schema": {
           "type": "integer"
         }
+      },
+      "depID": {
+        "name": "depID",
+        "in": "path",
+        "description": "Department ID",
+        "required": true,
+        "schema": {
+          "type": "integer"
+        }
       }
     },
     "responses": {
@@ -263,11 +252,6 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/ApiError"
-            },
-            "example": {
-              "error": "DuplicateError",
-              "message": "The organisation 'HotRed Inc.' already exists",
-              "code": 400
             }
           }
         }
@@ -307,9 +291,6 @@
         ],
         "summary": "Get all the organisations",
         "description": "This endpoint will get all the organisations in the dataset, Including their Departments, Questions and Players. Using this endpoint as an Organisation is not desired.\n",
-        "produces": [
-          "application/json"
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -322,13 +303,6 @@
         ],
         "summary": "Add a new Organisation",
         "description": "Create a new organisation. The name and the PIN of the organisation has to be unique.  The PIN property in the body is optional. A real life organisation should not use this endpoint.  Only the game admin should be able to create new organisations.\n",
-        "tag": "Organisation",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -389,15 +363,10 @@
             }
           },
           "400": {
-            "$ref": "#/components/responses/duplicate",
-            "example": {
-              "error": "DuplicateError",
-              "message": "The organisation 'HotRed Inc.' already exists",
-              "code": 400
-            }
+            "$ref": "#/components/responses/duplicate"
           },
           "default": {
-            "$ref": "#components/responses/default"
+            "$ref": "#/components/responses/default"
           }
         }
       }
@@ -408,6 +377,7 @@
           "Organisation"
         ],
         "summary": "Get a specific Organisation",
+        "description": "a single organisation with the given ID",
         "parameters": [
           {
             "$ref": "#/components/parameters/orgID"
@@ -415,7 +385,211 @@
         ],
         "responses": {
           "200": {
-            "description": "a single organisation with the given ID",
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Organisation"
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "default": {
+            "$ref": "#/components/responses/default"
+          }
+        }
+      }
+    },
+    "/organisation/:orgID/department": {
+      "get": {
+        "tags": [
+          "Department"
+        ],
+        "summary": "Get all departments from the given Organisation",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/orgID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Department"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "default": {
+            "$ref": "#/components/responses/default"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Department"
+        ],
+        "summary": "Add a new department to the given Organisation",
+        "description": "Add a new department to a organisation. It's important that the department name is unique.\n",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/orgID"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Department"
+              },
+              "example": {
+                "name": "IT department"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Organisation"
+                },
+                "example": {
+                  "_id": 123456,
+                  "name": "HotRed Inc.",
+                  "pin": 123456,
+                  "departments": [
+                    "\\your created department here\\"
+                  ],
+                  "questions": [],
+                  "plays": []
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "default": {
+            "$ref": "#/components/responses/default"
+          }
+        }
+      }
+    },
+    "/organisation/:orgID/department/:depID": {
+      "get": {
+        "tags": [
+          "Department"
+        ],
+        "summary": "Gets the department with the given ID",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/orgID"
+          },
+          {
+            "$ref": "#/components/parameters/depID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Department"
+                },
+                "example": {
+                  "_id": "32fdas89a3r",
+                  "name": "IT department"
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "default": {
+            "$ref": "#/components/responses/default"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Department"
+        ],
+        "summary": "Updates the department with the given ID",
+        "description": "Update a department with the given ID of an organisation. If successfull, returns the complete organisation with the updated departments\n",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/orgID"
+          },
+          {
+            "$ref": "#/components/parameters/depID"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Department"
+              },
+              "example": {
+                "name": "Marketing department"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Organisation"
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "default": {
+            "$ref": "#/components/responses/default"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Department"
+        ],
+        "summary": "Deletes the department with the given ID",
+        "description": "Deletes a department with the given ID of an organisation. If successfull, returns the complete organisation with the updated departments\n",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/orgID"
+          },
+          {
+            "$ref": "#/components/parameters/depID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
             "content": {
               "application/json": {
                 "schema": {
